deploy/k8s/15-prometheusalert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheusalert
  namespace: live-auction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheusalert
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prometheusalert
    spec:
      containers:
        - name: prometheusalert
          image: feiyu563/prometheus-alert:v4.9
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/conf/app.conf
              subPath: app.conf
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
      volumes:
        - name: config
          secret:
            secretName: prometheusalert-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheusalert
  namespace: live-auction
spec:
  selector:
    app: prometheusalert
  ports:
    - port: 8080
      targetPort: 8080
