deploy/k8s/12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-auction-backend
  namespace: live-auction
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auction-api.kirac0on.com
      secretName: live-auction-tls
  rules:
    - host: auction-api.kirac0on.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: live-auction-backend
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: live-auction
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.kirac0on.com
      secretName: grafana-tls
  rules:
    - host: grafana.kirac0on.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
